# verifoxx-cheri-wamr

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build_iwasm.sh  llvm_toolchain.cmake  llvm_toolchain_x86_64.cmake  toolchain.cmake  toolchain_x86_64.cmake
build-scripts/: config_common.cmake  runtime_lib.cmake
core/: config.h  version.h
core/iwasm/aot/: aot_loader.c  aot_runtime.c  aot_runtime.h
core/iwasm/aot/arch/: aot_reloc_aarch64.c
core/iwasm/common/: iwasm_common.cmake  wasm_application.c  wasm_exec_env.c  wasm_exec_env.h  wasm_memory.c  wasm_memory.h  wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/common/arch/: invokeNative_aarch64_purecap.s
core/iwasm/compilation/: aot_compiler.c  aot_compiler.h  aot_emit_aot_file.c  aot_emit_exception.c  aot_emit_function.c  aot_emit_memory.c  aot_emit_table.c  aot_emit_variable.c  aot_llvm.c  aot_llvm.h  aot_llvm_extra.cpp  aot_llvm_extra2.cpp  aot_llvm_extra2.h
core/iwasm/compilation/simd/: simd_load_store.c
core/iwasm/interpreter/: wasm.h  wasm_interp.h  wasm_interp_classic.c  wasm_interp_fast.c  wasm_loader.c  wasm_runtime.c  wasm_runtime.h
core/iwasm/libraries/libc-uvwasi/: libc_uvwasi_wrapper.c
core/iwasm/libraries/libc-wasi/: libc_wasi_wrapper.c
core/shared/mem-alloc/ems/: ems_alloc.c  ems_gc.h  ems_gc_internal.h  ems_kfc.c
core/shared/platform/linux/: shared_platform.cmake
core/shared/platform/linux-cheri-purecap/: cheri_compartment_temp_syscalls.c  cheri_compartment_temp_syscalls.h  cheri_mem_mgmt.cpp  cheri_mem_mgmt.h  cheri_mem_wrapper.cpp  cheri_posix_malloc.cpp  cheri_syscalls.cpp  platform_init.c  platform_internal.h  shared_platform.cmake
core/shared/platform/linux-cheri-purecap-capmgr/: cheri_mem_mgmt.cpp  cheri_mem_mgmt_c_api.h  cheri_mem_wrapper_capmgr.cpp  cheri_mem_wrapper_compartment.cpp  cheri_syscalls_compartment.cpp  platform_internal.h  shared_platform.cmake
doc/: build_wamr.md  build_wasm_app.md
frontend/: CMakeLists.txt  README.md  cheri_mem_mgmt.cpp  cheri_mem_mgmt.h  cheri_mem_mgt_c_api.h  cheri_wasm_native_test.cpp  cheri_wasm_native_test.h  deprecated_cheri_mem_mgmt.cpp  deprecated_cheri_mem_mgmt.h  deprecated_cheri_mem_mgmt_c_api.h  main.cpp
tests/autorun_benchmark/: .project  .pydevproject  README.md  auto_benchmark.py  autorun_benchmark.py  bm_test.py  bm_test_collection.py  csv_common.py  csv_processor.py  dummy_wamr_cheri_benchmark_settings.json  example_dummy_wamr_cheri_benchmark_settings.json  example_wamr_cheri_benchmark_settings.json  logging_mixin.py  requirements.txt  result_writer.py  test_runner.py  wamr_cheri_benchmark_settings.json
tests/autorun_benchmark/testbench_simulated_iwasm/: CMakeLists.txt  CMakePresets.json  llvm_toolchain.cmake  main.cpp
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/coremark/: cheri_build.sh
tests/benchmarks/dhrystone/: cheri-build.sh
tests/benchmarks/polybench/: cheri-build.sh
tests/benchmarks/sightglass/: cheri-build.sh
tests/wamr-linux-cheri-purecap-tests/: README.md  call_indirect_example.wasm  control_instrs.wasm  externrefs_cmdline.wasm  externrefs_for_app.wasm  hello_no_libc.wasm  hello_puts.wasm  hello_wamr.wasm  simple.wasm  simple_print.wasm  wamr_native_calls.wasm  wamr_natives_and_call_wasm.wasm  wasi_advanced_file.wasm  wasi_clock.wasm  wasi_random.wasm  wasi_sockets_tcp.wasm
tests/wamr-linux-cheri-purecap-tests/externref-app/: CMakeLists.txt  README.md  main.c  test_routines.cpp  test_routines.h
tests/wamr-linux-cheri-purecap-tests/externref-app/linux/: CMakeLists.txt
tests/wamr-linux-cheri-purecap-tests/externref-app/linux-cheri-purecap/: CMakeLists.txt
tests/wamr-linux-cheri-purecap-tests/native_libs/: CMakeLists.txt  README.md  cheri_wasm_native_test.cpp  cheri_wasm_native_test.h
tests/wamr-linux-cheri-purecap-tests/native_libs/linux/: CMakeLists.txt
tests/wamr-linux-cheri-purecap-tests/native_libs/linux-cheri-purecap/: CMakeLists.txt
tests/wamr-linux-cheri-purecap-tests/native_libs/linux-cheri-purecap-capmgr/: CMakeLists.txt
tests/wamr-linux-cheri-purecap-tests/src/: call_indirect_example.wat  control_instrs.wat  externrefs.wat  externrefs_cmdline.wat  externrefs_for_app.wat  hello_no_libc.c  hello_puts.c  hello_wamr.c  simple.c  simple_memory_grow.wat  simple_print.wat  wamr_native_calls.c  wamr_natives_and_call_wasm.c  wasi_advanced_file.c  wasi_clock.c  wasi_random.c  wasi_simple_file.c  wasi_sockets_tcp.c  wasi_tcp_dns_lookup.c  wasm_memory_hello.wat
tests/wamr-linux-cheri-purecap-tests/wasi-testsuite/: README.md  skiptests.json  wamr-cheri-aot.py  wamr-cheri-compart.py  wamr-cheri.py
tests/wamr-linux-cheri-purecap-tests/wasi-testsuite/adapter-json-configs/: example_wamr_cheri_adapter_settings.json  example_with_aot_wamr_cheri_adapter_settings_local_wamrc.json  (+7 more)
tests/wamr-linux-cheri-purecap-tests/wat_dumps/: hello_no_libc.wat  hello_puts.wat  hello_wamr.wat  simple.wat  wamr_native_calls.wat  wamr_natives_and_call_wasm.wat  wasi_advanced_file.wat  wasi_clock.wat  wasi_random.wat  wasi_simple_file.wat  wasi_sockets_tcp.wat  wasi_tcp_dns_lookup.wat
verifoxx-cheri-cap-mgr/: CCapMgrLogger.h  CCapability.h  CCompartment.cpp  CCompartment.h  CCompartmentLibs.cpp  CCompartmentLibs.h  CDynamicSection.cpp  CDynamicSection.h  CMakeLists.txt  CMakeLists.txt.TO_BE_DEPRECATED  CRelocationTable.cpp  CSharedObject.cpp  CWamrProxy.h  README.md  comp_caller.h  compartment_caller_asm.S  main.cpp
verifoxx-cheri-cap-mgr/capmgr/: CCompartment.cpp  CCompartment.h  CWamrProxy.h  capmgr_services.cpp  capmgr_services.h  comp_caller.c  comp_caller.h  compartment_caller_asm.S  main.cpp  main.cpp.TO_BE_DEPRECATED
verifoxx-cheri-cap-mgr/capmgr/cap_relocs/: CCompartmentLibs.h  CRelocationTable.cpp  CRelocationTable.h  CSharedObject.cpp
verifoxx-cheri-cap-mgr/common/: CCapMgrServiceData.h  CCompartmentData.h  capmgr_service_function_types.h  comp_common_asm.h  comp_common_defs.h
verifoxx-cheri-cap-mgr/compartment/: comp_entry.cpp  service_call_proxy.h
verifoxx-cheri-cap-mgr/utils/: CCapMgrLogger.h
wamr-compiler/: CMakeLists.txt  README.md
(+30 files in other folders)
